# book-bot

./: README.md  pyproject.toml
book_bot/: bot.py  message_texts.py
