[tool.poetry]
name = "book-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "book_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"
telegram = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
